fix main top position tablet

--- a/sass/contacts.scss
+++ b/sass/contacts.scss
@@ -146,7 +146,7 @@
 		}
 	}
 }
-@media only screen and (max-width: 420px) and (orientation: portrait) {
+@media only screen and (max-width: 770px) and (orientation: portrait) {
 	.main {
 		top: 8vh;
 	}
